Fix whitespace

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -306,9 +306,8 @@ ul, ol, dl {
   margin: 1em 1em 0.618em;
   font-size: var(--larger);
 }
-ul ul, ol ol, dl dl {
-  margin-top: 0;
-}
+ul ul, ol ol, dl dl
+  { margin: 0 auto }
 nav ol, nav ul {
   font-size: 1em;
   margin-bottom: 0;
